--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Raleway', sans-serif;
+    padding: 20px;
 }
 
 header {
@@ -28,17 +29,19 @@ header {
 
 .pitch-one {
     display: flex;
+    height: 100vh;
 }
 
 .main-pitch h1 {
-    font-weight: 700;
+    font-weight: bold;
 	font-size: 2.8em;
     color: hsl(243, 87%, 12%);
 }
 
 .main-pitch p {
-    color: hsl(238, 22%, 44%);
+    color: hsl(243, 87%, 12%);
     font-size: 1.3em;
+    font-weight: 600
 }
 
 .illustration-one img {
@@ -46,15 +49,21 @@ header {
 }
 
 .sign-email input {
-    border: 0.5px solid rgba(0,0,0,0.05);
+    border: 0.5px solid hsl(243, 83%, 9%);
     padding: 15px;
-    width: 20rem;
-    border-radius: 5px;
+    width: 18rem;
+    border-radius: 2px;
 }
 
 .sign-email button {
-    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 5px 15px rgba(0, 0, 0, 0.1);
     color: white;
     background-color: hsl(224, 93%, 58%);
-    padding: 30px;
+    border: 2px solid hsl(224, 93%, 58%);
+    height: 2.8rem;
+    border-radius: 3px;
+    width: 12rem;
+    margin-left: 15px;
+    
+    font-size: 15px;
 }
